--- a/style.css
+++ b/style.css
@@ -59,9 +59,21 @@ header
 }
 
 /* Form & input block ///////////////////////////////////////////*/
+
+
+.fa-map-marker-alt
+{
+  border: 0px;
+  border-radius: 15px 0px 0px 15px;
+  padding: 11px;
+  color: black;
+  background-color: #F2F2F2;
+  width: 15px;
+} 
+
 #myInput
 {
-  width: 250 px;
+  width: 200px;
   border-radius: 5px;
   border: 2px solid #F2F2F2;
   padding: 9.5px;
@@ -75,16 +87,10 @@ header
   color: #ffff;
   background-color: #0065FC;
   margin-left: -6px;
+  width: 100px;
 }
 
 /* Filter list block ///////////////////////////////////////////*/
-#myUL
-{
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
-}
-
 .filter_list
 {
   display: flex;
@@ -92,19 +98,214 @@ header
   margin-top: 30px;
 }
 
-/* Hebergement photo block ///////////////////////////////////////////*/
-.block_lodging
+.filter_title_icons
 {
- 
-  background: #F2F2F2;
+  margin-right: 30px;
+}   
+
+#filter_menu
+{
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  position: relative;
+  width: 100%;
+  height: 100%;  
+
 }
+
+.economique,.familiale,.romantique,.animaux
+{
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  margin-right: 75px;
+}
+
+
+/*///////////////////////////////////////////////////////////*/
+.fa-money-bill-wave     /*icon class pour Economique*/
+{
+  border-radius: 50%;
+  padding: 21px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15px;
+  color: #0065FC;
+  background-color: #DEEBFF;
+  position: absolute; 
+  z-index: 9;
+  bottom: -21px;
+  left: -1%;
+} 
+
+
+.economique
+{ 
+  width: 119px; 
+	padding: 10.5px 20px; 
+	border-radius: 30px; 
+  border: 2px solid #b8b7b7;
+	background: #ffff; 
+	position: absolute; 
+	color: #fff; 
+	text-align: right; 
+	color: black; 
+  bottom: -22px;
+  left: 0%;
+}
+
+/*///////////////////////////////////////////////////////////*/
+ .fa-child     /*icon class pour Familiale*/
+{
+  border-radius: 50%;
+  padding: 21px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15px;
+  color: #0065FC;
+  background-color: #DEEBFF;
+  	position: absolute; 
+   z-index: 8;
+   bottom: -21px;
+   left: 20%;
+} 
+
+
+.familiale
+{ 
+  width: 90px; 
+	padding: 10.5px 20px; 
+	border-radius: 30px; 
+  border: 2px solid #b8b7b7;
+	background: #ffff; 
+	position: absolute; 
+	color: #fff; 
+	text-align: right; 
+	color: black; 
+  bottom: -22px;
+  left: 21%;  
+}
+
+/*///////////////////////////////////////////////////////////*/
+ .fa-heart     /*icon class pour Romantique*/
+{
+  border-radius: 50%;
+  padding: 14px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15px;
+  color: #0065FC;
+  background-color: #DEEBFF;
+  	position: absolute; 
+   z-index: 7;
+bottom: -15px;
+left: 50%;  
+} 
+
+
+.romantique
+{ 
+  width: 110px; 
+	padding: 10.5px 20px; 
+	border-radius: 30px; 
+  border: 2px solid #b8b7b7;
+	background: #ffff; 
+	position: absolute; 
+	color: #fff; 
+	text-align: right; 
+	color: black; 
+bottom: -22px;
+left: 50%;  
+}
+
+/*///////////////////////////////////////////////////////////*/
+ .fa-dog     /*icon class pour Animaux authorisés*/
+{
+  border-radius: 50%;
+  padding: 14px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15px;
+  color: #0065FC;
+  background-color: #DEEBFF;
+  	position: absolute; 
+   z-index: 6;
+bottom: -15px;
+left: 70%; 
+} 
+
+.animaux
+{ 
+  width: 180px; 
+	padding: 10.5px 20px; 
+	border-radius: 30px; 
+  border: 2px solid #b8b7b7;
+	background: #ffff; 
+	position: absolute; 
+	color: #fff; 
+	text-align: right; 
+	color: black; 
+bottom: -22px;
+left: 70%; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* SCRAP*/
+economique:after
+{ 
+	content: ''; 
+	position: absolute; 
+	border-radius: 50%;
+  padding: 15px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 15px;
+  color: #0065FC;
+  background-color: #DEEBFF;
+  top: 10%; 
+  right: 75%;
+}
+/* SCRAP*/
+
+
+
+/* Hebergement photo block ///////////////////////////////////////////*/
+
 
 /* Plus populaire photo block ///////////////////////////////////////////*/
-.block_populaire
-{
-   background: #F2F2F2;
-}
 
+/* Définition des polices ///////////////////////////////////////////*/
+
+
+  
+  
 
 
 
