--- a/style.css
+++ b/style.css
@@ -645,6 +645,7 @@ header
 {
   display: flex;
   flex-direction: row;
+  margin-top: -5px;
   margin-left: -40px;
   list-style-type: none;
   color: #0065FC;
@@ -724,6 +725,7 @@ header
 {
   display: flex;
   flex-direction: row;
+  margin-top: -5px;
   margin-left: -40px;
   list-style-type: none;
   color: #0065FC;
