--- a/style.css
+++ b/style.css
@@ -966,3 +966,32 @@ header
   margin-top: 45px;
   filter: drop-shadow(1px 1px 10px #4444442e);
 }
+
+/* Footer block ////////////////////////////////////////////////////////////////*/
+footer
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding-top: 80px;
+  background-color: #F2F2F2;
+  height: 217px;
+}
+
+footer li
+{
+  list-style-type: none;
+}
+
+footer a
+{
+  text-decoration: none;
+  color: black;
+}
+
+.about nav, .our_lodges nav, .assistance nav
+{
+ margin-left: -40px; 
+ margin-top: -10px;
+ line-height: 25px;
+}
